- Minor cleanup to get rid of unused CssContext in Style constructor - Switch to ArrayList from LinkedList in a few places (saves several MBs of memory on Hamlet) - Introduce ScaledLineMetrics to work around apparent Java bug